libqt6c/src/libqdatetime.hpp

typedef struct QCalendar QCalendar;
typedef struct QDate QDate;
typedef struct QDateTime QDateTime;
typedef struct QTime QTime;
typedef struct QTimeZone QTimeZone;
QDateTime* QDateTime_new();
QDateTime* QDateTime_new2(QDate* date, QTime* time);
QDateTime* QDateTime_new3(QDate* date, QTime* time, const QTimeZone* timeZone);
QDateTime* QDateTime_new4(const QDateTime* other);
QDateTime* QDateTime_new5(QDate* date, QTime* time, int spec);
QDateTime* QDateTime_new6(QDate* date, QTime* time, int spec, int offsetSeconds);
void QDateTime_OperatorAssign(QDateTime* self, const QDateTime* other);
void QDateTime_Swap(QDateTime* self, QDateTime* other);
bool QDateTime_IsNull(const QDateTime* self);
bool QDateTime_IsValid(const QDateTime* self);
QDate* QDateTime_Date(const QDateTime* self);
QTime* QDateTime_Time(const QDateTime* self);
int QDateTime_TimeSpec(const QDateTime* self);
int QDateTime_OffsetFromUtc(const QDateTime* self);
QTimeZone* QDateTime_TimeZone(const QDateTime* self);
libqt_string QDateTime_TimeZoneAbbreviation(const QDateTime* self);
bool QDateTime_IsDaylightTime(const QDateTime* self);
long long QDateTime_ToMSecsSinceEpoch(const QDateTime* self);
long long QDateTime_ToSecsSinceEpoch(const QDateTime* self);
void QDateTime_SetDate(QDateTime* self, QDate* date);
void QDateTime_SetTime(QDateTime* self, QTime* time);
void QDateTime_SetTimeSpec(QDateTime* self, int spec);
void QDateTime_SetOffsetFromUtc(QDateTime* self, int offsetSeconds);
void QDateTime_SetTimeZone(QDateTime* self, const QTimeZone* toZone);
void QDateTime_SetMSecsSinceEpoch(QDateTime* self, long long msecs);
void QDateTime_SetSecsSinceEpoch(QDateTime* self, long long secs);
libqt_string QDateTime_ToString(const QDateTime* self);
libqt_string QDateTime_ToString2(const QDateTime* self, const libqt_string format);
QDateTime* QDateTime_AddDays(const QDateTime* self, long long days);
QDateTime* QDateTime_AddMonths(const QDateTime* self, int months);
QDateTime* QDateTime_AddYears(const QDateTime* self, int years);
QDateTime* QDateTime_AddSecs(const QDateTime* self, long long secs);
QDateTime* QDateTime_AddMSecs(const QDateTime* self, long long msecs);
QDateTime* QDateTime_AddDuration(const QDateTime* self, int64_t msecs);
QDateTime* QDateTime_ToTimeSpec(const QDateTime* self, int spec);
QDateTime* QDateTime_ToLocalTime(const QDateTime* self);
QDateTime* QDateTime_ToUTC(const QDateTime* self);
QDateTime* QDateTime_ToOffsetFromUtc(const QDateTime* self, int offsetSeconds);
QDateTime* QDateTime_ToTimeZone(const QDateTime* self, const QTimeZone* toZone);
long long QDateTime_DaysTo(const QDateTime* self, const QDateTime* param1);
long long QDateTime_SecsTo(const QDateTime* self, const QDateTime* param1);
long long QDateTime_MsecsTo(const QDateTime* self, const QDateTime* param1);
QDateTime* QDateTime_CurrentDateTime();
QDateTime* QDateTime_CurrentDateTimeUtc();
QDateTime* QDateTime_FromString4(const libqt_string stringVal);
QDateTime* QDateTime_FromString5(const libqt_string stringVal, const libqt_string format);
QDateTime* QDateTime_FromMSecsSinceEpoch(long long msecs);
QDateTime* QDateTime_FromSecsSinceEpoch(long long secs);
QDateTime* QDateTime_FromMSecsSinceEpoch2(long long msecs, const QTimeZone* timeZone);
QDateTime* QDateTime_FromSecsSinceEpoch2(long long secs, const QTimeZone* timeZone);
long long QDateTime_CurrentMSecsSinceEpoch();
long long QDateTime_CurrentSecsSinceEpoch();
QDateTime* QDateTime_OperatorPlusAssign(QDateTime* self, int64_t duration);
QDateTime* QDateTime_OperatorMinusAssign(QDateTime* self, int64_t duration);
libqt_string QDateTime_ToString1(const QDateTime* self, int format);
libqt_string QDateTime_ToString22(const QDateTime* self, const libqt_string format, QCalendar* cal);
QDateTime* QDateTime_FromString23(const libqt_string stringVal, int format);
QDateTime* QDateTime_FromString34(const libqt_string stringVal, const libqt_string format, QCalendar* cal);
QDateTime* QDateTime_FromMSecsSinceEpoch22(long long msecs, int spec);
QDateTime* QDateTime_FromMSecsSinceEpoch3(long long msecs, int spec, int offsetFromUtc);
QDateTime* QDateTime_FromSecsSinceEpoch22(long long secs, int spec);
QDateTime* QDateTime_FromSecsSinceEpoch3(long long secs, int spec, int offsetFromUtc);
void QDateTime_Delete(QDateTime* self);