QtBeef/src/Qt/qdatetime.bf

extension CQt
{
	[LinkName("QDateTime_new")]
	public static extern QDateTime_Ptr QDateTime_new();
	[LinkName("QDateTime_new2")]
	public static extern QDateTime_Ptr QDateTime_new2(void* date, void* time);
	[LinkName("QDateTime_new3")]
	public static extern QDateTime_Ptr QDateTime_new3(void* date, void* time, void** timeZone);
	[LinkName("QDateTime_new4")]
	public static extern QDateTime_Ptr QDateTime_new4(void** other);
	[LinkName("QDateTime_new5")]
	public static extern QDateTime_Ptr QDateTime_new5(void* date, void* time, Qt_TimeSpec spec);
	[LinkName("QDateTime_new6")]
	public static extern QDateTime_Ptr QDateTime_new6(void* date, void* time, Qt_TimeSpec spec, c_int offsetSeconds);
	[LinkName("QDateTime_Delete")]
	public static extern void QDateTime_Delete(QDateTime_Ptr self);
	[LinkName("QDateTime_OperatorAssign")]
	public static extern void QDateTime_OperatorAssign(void* self, void** other);
	[LinkName("QDateTime_Swap")]
	public static extern void QDateTime_Swap(void* self, void** other);
	[LinkName("QDateTime_IsNull")]
	public static extern bool QDateTime_IsNull(void* self);
	[LinkName("QDateTime_IsValid")]
	public static extern bool QDateTime_IsValid(void* self);
	[LinkName("QDateTime_Date")]
	public static extern void* QDateTime_Date(void* self);
	[LinkName("QDateTime_Time")]
	public static extern void* QDateTime_Time(void* self);
	[LinkName("QDateTime_TimeSpec")]
	public static extern Qt_TimeSpec QDateTime_TimeSpec(void* self);
	[LinkName("QDateTime_OffsetFromUtc")]
	public static extern c_int QDateTime_OffsetFromUtc(void* self);
	[LinkName("QDateTime_TimeZone")]
	public static extern void* QDateTime_TimeZone(void* self);
	[LinkName("QDateTime_TimeZoneAbbreviation")]
	public static extern libqt_string QDateTime_TimeZoneAbbreviation(void* self);
	[LinkName("QDateTime_IsDaylightTime")]
	public static extern bool QDateTime_IsDaylightTime(void* self);
	[LinkName("QDateTime_ToMSecsSinceEpoch")]
	public static extern c_longlong QDateTime_ToMSecsSinceEpoch(void* self);
	[LinkName("QDateTime_ToSecsSinceEpoch")]
	public static extern c_longlong QDateTime_ToSecsSinceEpoch(void* self);
	[LinkName("QDateTime_SetDate")]
	public static extern void QDateTime_SetDate(void* self, void* date);
	[LinkName("QDateTime_SetTime")]
	public static extern void QDateTime_SetTime(void* self, void* time);
	[LinkName("QDateTime_SetTimeSpec")]
	public static extern void QDateTime_SetTimeSpec(void* self, Qt_TimeSpec spec);
	[LinkName("QDateTime_SetOffsetFromUtc")]
	public static extern void QDateTime_SetOffsetFromUtc(void* self, c_int offsetSeconds);
	[LinkName("QDateTime_SetTimeZone")]
	public static extern void QDateTime_SetTimeZone(void* self, void** toZone);
	[LinkName("QDateTime_SetMSecsSinceEpoch")]
	public static extern void QDateTime_SetMSecsSinceEpoch(void* self, c_longlong msecs);
	[LinkName("QDateTime_SetSecsSinceEpoch")]
	public static extern void QDateTime_SetSecsSinceEpoch(void* self, c_longlong secs);
	[LinkName("QDateTime_ToString")]
	public static extern libqt_string QDateTime_ToString(void* self);
	[LinkName("QDateTime_ToString2")]
	public static extern libqt_string QDateTime_ToString2(void* self, libqt_string format);
	[LinkName("QDateTime_AddDays")]
	public static extern void* QDateTime_AddDays(void* self, c_longlong days);
	[LinkName("QDateTime_AddMonths")]
	public static extern void* QDateTime_AddMonths(void* self, c_int months);
	[LinkName("QDateTime_AddYears")]
	public static extern void* QDateTime_AddYears(void* self, c_int years);
	[LinkName("QDateTime_AddSecs")]
	public static extern void* QDateTime_AddSecs(void* self, c_longlong secs);
	[LinkName("QDateTime_AddMSecs")]
	public static extern void* QDateTime_AddMSecs(void* self, c_longlong msecs);
	[LinkName("QDateTime_AddDuration")]
	public static extern void* QDateTime_AddDuration(void* self, void* msecs);
	[LinkName("QDateTime_ToTimeSpec")]
	public static extern void* QDateTime_ToTimeSpec(void* self, Qt_TimeSpec spec);
	[LinkName("QDateTime_ToLocalTime")]
	public static extern void* QDateTime_ToLocalTime(void* self);
	[LinkName("QDateTime_ToUTC")]
	public static extern void* QDateTime_ToUTC(void* self);
	[LinkName("QDateTime_ToOffsetFromUtc")]
	public static extern void* QDateTime_ToOffsetFromUtc(void* self, c_int offsetSeconds);
	[LinkName("QDateTime_ToTimeZone")]
	public static extern void* QDateTime_ToTimeZone(void* self, void** toZone);
	[LinkName("QDateTime_DaysTo")]
	public static extern c_longlong QDateTime_DaysTo(void* self, void** param1);
	[LinkName("QDateTime_SecsTo")]
	public static extern c_longlong QDateTime_SecsTo(void* self, void** param1);
	[LinkName("QDateTime_MsecsTo")]
	public static extern c_longlong QDateTime_MsecsTo(void* self, void** param1);
	[LinkName("QDateTime_CurrentDateTime")]
	public static extern void* QDateTime_CurrentDateTime();
	[LinkName("QDateTime_CurrentDateTimeUtc")]
	public static extern void* QDateTime_CurrentDateTimeUtc();
	[LinkName("QDateTime_FromString4")]
	public static extern void* QDateTime_FromString4(libqt_string stringVal);
	[LinkName("QDateTime_FromString5")]
	public static extern void* QDateTime_FromString5(libqt_string stringVal, libqt_string format);
	[LinkName("QDateTime_FromMSecsSinceEpoch")]
	public static extern void* QDateTime_FromMSecsSinceEpoch(c_longlong msecs);
	[LinkName("QDateTime_FromSecsSinceEpoch")]
	public static extern void* QDateTime_FromSecsSinceEpoch(c_longlong secs);
	[LinkName("QDateTime_FromMSecsSinceEpoch2")]
	public static extern void* QDateTime_FromMSecsSinceEpoch2(c_longlong msecs, void** timeZone);
	[LinkName("QDateTime_FromSecsSinceEpoch2")]
	public static extern void* QDateTime_FromSecsSinceEpoch2(c_longlong secs, void** timeZone);
	[LinkName("QDateTime_CurrentMSecsSinceEpoch")]
	public static extern c_longlong QDateTime_CurrentMSecsSinceEpoch();
	[LinkName("QDateTime_CurrentSecsSinceEpoch")]
	public static extern c_longlong QDateTime_CurrentSecsSinceEpoch();
	[LinkName("QDateTime_OperatorPlusAssign")]
	public static extern void** QDateTime_OperatorPlusAssign(void* self, void* duration);
	[LinkName("QDateTime_OperatorMinusAssign")]
	public static extern void** QDateTime_OperatorMinusAssign(void* self, void* duration);
	[LinkName("QDateTime_ToString1")]
	public static extern libqt_string QDateTime_ToString1(void* self, Qt_DateFormat format);
	[LinkName("QDateTime_ToString22")]
	public static extern libqt_string QDateTime_ToString22(void* self, libqt_string format, void* cal);
	[LinkName("QDateTime_FromString23")]
	public static extern void* QDateTime_FromString23(libqt_string stringVal, Qt_DateFormat format);
	[LinkName("QDateTime_FromString34")]
	public static extern void* QDateTime_FromString34(libqt_string stringVal, libqt_string format, void* cal);
	[LinkName("QDateTime_FromMSecsSinceEpoch22")]
	public static extern void* QDateTime_FromMSecsSinceEpoch22(c_longlong msecs, Qt_TimeSpec spec);
	[LinkName("QDateTime_FromMSecsSinceEpoch3")]
	public static extern void* QDateTime_FromMSecsSinceEpoch3(c_longlong msecs, Qt_TimeSpec spec, c_int offsetFromUtc);
	[LinkName("QDateTime_FromSecsSinceEpoch22")]
	public static extern void* QDateTime_FromSecsSinceEpoch22(c_longlong secs, Qt_TimeSpec spec);
	[LinkName("QDateTime_FromSecsSinceEpoch3")]
	public static extern void* QDateTime_FromSecsSinceEpoch3(c_longlong secs, Qt_TimeSpec spec, c_int offsetFromUtc);
}
